--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link type="text/css" rel="stylesheet" href="index.css">
+    <link type="text/css" rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
      <meta name="viewport" content="width=device-width, initial-scale=1">
     
