--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ h1 {
     
     <footer>
         <div class="icons">
-        <a href="https://www.linkedin.com/in/ashish-kumar-singh-6a059b84/" class="fa fa-linkedin"></a>
-<a href="https://twitter.com/thisisAshishKS" class="fa fa-twitter"></a>
-        <a href="https://github.com/ashishSingh100" class="fa fa-github"></a>
-<a href="https://www.quora.com/profile/Ashish-Kumar-Singh-187" class="fa fa-quora"></a>
-        <a href="https://drive.google.com/open?id=0B8Ecx_YpvGJdb0pKZ1g1N2ZHSG8" class="fa fa-paperclip"></a>
+        <a href="https://www.linkedin.com/in/ashish-kumar-singh-6a059b84/" target="_blank" class="fa fa-linkedin"></a>
+ <a href="https://twitter.com/thisisAshishKS" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://github.com/ashishSingh100" target="_blank" class="fa fa-github"></a>
+<a href="https://www.quora.com/profile/Ashish-Kumar-Singh-187" target="_blank" class="fa fa-quora"></a>
+        <a href="https://drive.google.com/open?id=0B8Ecx_YpvGJdb0pKZ1g1N2ZHSG8" target="_blank" class="fa fa-paperclip"></a>
         </div>
         
     </footer>
